--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "nuxt": "^3.4.1"
+    "@nuxt/devtools": "latest",
+    "@nuxthq/ui": "^2.6.0",
+    "@types/node": "^18.17.0",
+    "nuxt": "^3.6.5"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.6.6",
+    "@nuxthq/ui": "^2.6.0",
+    "nuxt-icon": "^0.4.2",
     "nuxt-vue3-google-signin": "^0.0.8"
   }
 }
